[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-scholes-greek-surface"
version = "1.0.0"
description = "Interactive 3D visualizations of Black-Scholes option Greeks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Black-Scholes Greek Surface Contributors"}
]
keywords = [
    "black-scholes",
    "options",
    "greeks",
    "visualization",
    "finance",
    "derivatives",
    "trading",
    "delta",
    "gamma",
    "theta",
    "vega",
    "rho"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "plotly>=5.10.0",
]

[project.optional-dependencies]
full = [
    "kaleido>=0.2.1",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "streamlit>=1.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
]

[project.scripts]
greek-surface = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/Black-Scholes-Greek-Surface"
Documentation = "https://github.com/yourusername/Black-Scholes-Greek-Surface#readme"
Repository = "https://github.com/yourusername/Black-Scholes-Greek-Surface"
Issues = "https://github.com/yourusername/Black-Scholes-Greek-Surface/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
